--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "npm i"
   },
   "dependencies": {
     "cors": "^2.8.5",
