--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
-    "framer-motion": "^10.15.2",
+    "framer-motion": "^10.16.4",
     "init": "^0.1.2",
     "moment": "^2.29.4",
     "postcss": "^8.4.27",
@@ -18,7 +18,7 @@
     "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.0"
   },
